fix: build config

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif8266
 board = esp01
 framework = esp8266-rtos-sdk
+build_flags =
+    -Imodules/LOG
+    -DLOG_FOR_MCU
+    ;-DLOG_NDEBUG
+    -Imodules/MAKE_EVENT
